# project-holos-repo

./: .gitattributes  .gitignore  .mcp.json  .vercelignore  2017_FAILURE_HISTOGRAM.md  2017_GROUND_TRUTH_PAGES1-10.md  2017_geocoded.json  2017_geocoded_fixed.json  2017_gt_test_set.json  2017_valid_records.json  AGENTS.md  BRANCHING.md  CLAUDE.md  Dockerfile  EXTRACTION_BENCHMARK_RESULTS.json  GROUND_TRUTH_2012_PAGES2-20.md  PHASE1_STATUS.md  Procfile  RAILWAY_SETUP.md  RANGE_GEOCODING_VALIDATION.md  README.md  SETUP.md  TASKS.md  VIBESCODE_TEMPLATE.md  decisions.md  docker-compose.yml  init_railway.py  load_staging.sql  measure_cascade_accuracy.py  pyproject.toml  railway.sh  requirements.txt  staging_load.json  test_end_to_end.py  test_tier2_validation.py  vercel.json
.claude/: settings.json
.codex/: hooks.json
api/: app.py  index.py  reports.py
config/: geocode.yaml  sources.yaml  vocabularies.yaml
data/: 2012_menu_raw.csv  2012_menu_raw_cleaned_geocoded.csv  expansion_2017_all_wards_summary.json  expansion_2017_analysis_with_fix.json  gazetteer_chicago_complete.json  multi_year_2012_2023.json  need_match_2017.json  report_by_ward_2017.json  trends_2012_2017.json  truncated_review_queue.json  utility_conflicts_2017.json  ward01_2017_corrections.json  ward01_2017_menu.csv  ward01_2017_menu_cleaned.csv  ward01_2017_menu_cleaned_classified.csv  ward01_2017_menu_cleaned_geocoded.csv  ward01_2017_menu_enhanced.csv  ward01_2017_pilot_analysis.json  ward01_alley_widths_measured.json  ward01_alleys_segmented.json  ward01_building_footprints_sample.geojson  ward01_pipeline_summary.json  ward02_2017_menu.csv  ward02_2017_menu_cleaned.csv  ward02_2017_menu_cleaned_geocoded.csv  ward03_2017_menu.csv  ward03_2017_menu_cleaned.csv  ward03_2017_menu_cleaned_geocoded.csv  ward04_2017_menu.csv  ward04_2017_menu_cleaned.csv  ward04_2017_menu_cleaned_geocoded.csv  ward05_2017_menu.csv  ward05_2017_menu_cleaned.csv  ward05_2017_menu_cleaned_geocoded.csv  ward06_2017_menu.csv  ward06_2017_menu_cleaned.csv  ward06_2017_menu_cleaned_geocoded.csv  ward07_2017_menu.csv  ward07_2017_menu_cleaned.csv  ward07_2017_menu_cleaned_geocoded.csv  (+137 more)
docs/: 2012_wards_1_10_REGENERATED.geojson  2017_map.html  index.html  (+18 more)
(+167 files in other folders)
