[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holos-tools"
version = "0.1.0"
description = "Project Holos: jurisdiction-agnostic records-to-twin pipeline"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
  {name = "Project Holos", email = "holos@example.com"}
]
requires-python = ">=3.12,<3.13"

dependencies = [
  # Geospatial & data
  "geopandas>=0.14.0",
  "shapely>=2.0.0",
  "pyproj>=3.6.0",
  "fiona>=1.9.0",
  "rasterio>=1.3.0",
  # Data processing
  "pandas>=2.0.0",
  "duckdb>=0.9.0",
  "pyarrow>=13.0.0",
  "pandera>=0.18.0",
  # CLI & utilities
  "typer>=0.9.0",
  "click>=8.1.0",
  "pydantic>=2.0.0",
  # Web & network
  "httpx>=0.25.0",
  "requests>=2.31.0",
  # PDF & OCR
  "pdfplumber>=0.10.0",
  "PyMuPDF>=1.23.0",
  "pytesseract>=0.3.0",
  "paddleocr>=2.7.0.0",
  # AI & embeddings
  "anthropic>=0.7.0",
  "sentence-transformers>=2.2.0",
  # Database
  "psycopg[binary]>=3.1.0",
  "sqlalchemy>=2.0.0",
  "pgvector>=0.2.0",
  # Text processing
  "rapidfuzz>=3.0.0",
  "usaddress>=0.5.10",
  # Fuzzy matching & string similarity
  "metaphone>=0.1.3",
  "unidecode>=1.3.0",
  # Configuration
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  # Logging & monitoring
  "python-json-logger>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "pre-commit>=3.4.0",
]

[project.scripts]
holos = "holos_tools.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["holos_tools"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line too long (Black handles this)

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Phase 1: pragmatic, not perfect
disallow_incomplete_defs = false

[tool.vercel]
# Phase 1 MVP: static site deployment only
# Point to non-existent file to tell Vercel to skip Python runtime
entrypoint = "nonexistent_api.py"
